fix: manifest ordering

--- a/custom_components/ha_kumo_ws/manifest.json
+++ b/custom_components/ha_kumo_ws/manifest.json
@@ -1,17 +1,18 @@
 {
   "domain": "ha_kumo_ws",
   "name": "Mitsubishi Comfort (WS)",
-  "version": "0.1.0",
+  "codeowners": [
+    "@EnumC"
+  ],
+  "config_flow": true,
   "documentation": "https://github.com/EnumC/ha_kumo_ws",
+  "iot_class": "cloud_push",
+  "issue_tracker": "https://github.com/EnumC/ha_kumo_ws/issues",
   "requirements": [
     "httpx[http2]>=0.27.0",
     "python-socketio[client]>=5.11.0",
     "pydantic>=2.6.0",
     "aiohttp>=3.9.0"
   ],
-  "codeowners": [
-    "@EnumC"
-  ],
-  "config_flow": true,
-  "iot_class": "cloud_push"
+  "version": "0.1.0"
 }
